infra/gcp/envoy.yaml
# Deploying Envoy

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: registry-k8s-io-envoy
  name: registry-k8s-io-envoy
  namespace: registry-k8s-io-envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-k8s-io-envoy
  template:
    metadata:
      labels:
        app: registry-k8s-io-envoy
    spec:
      containers:
      - name: envoy
        command:
        - /usr/local/bin/envoy
        - -c
        - /etc/envoy.yaml
        - -l
        - debug
        resources:
          limits:
            cpu: 10m
            memory: 30Mi
          requests:
            cpu: 10m
            memory: 30Mi
        image: envoyproxy/envoy:v1.18.2
        volumeMounts:
          - name: envoy-config
            mountPath: /etc/envoy.yaml
            subPath: envoy.yaml
          - name: envoy-config-lds
            mountPath: /var/lib/envoy/
        ports:
          - name: http
            containerPort: 10000
      volumes:
      - name: envoy-config
        configMap:
          name: envoy-config
      - name: envoy-config-lds
        configMap:
          name: envoy-config-lds
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry-k8s-io-envoy
  name: registry-k8s-io-envoy
  namespace: registry-k8s-io-envoy
spec:
  ports:
  - name: registry-k8s-io
    port: 10000
    protocol: TCP
    targetPort: 10000
  - name: registry-k8s-io-admin
    port: 9003
    protocol: TCP
    targetPort: 9003
  selector:
    app: registry-k8s-io-envoy
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: registry-k8s-io-envoy
  namespace: registry-k8s-io-envoy
spec:
  rules:
  - host: envoy.ii-sandbox.${SHARINGIO_PAIR_BASE_DNS_NAME}
    http:
      paths:
      - backend:
          serviceName: registry-k8s-io-envoy
          servicePort: 10000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - envoy.ii-sandbox.${SHARINGIO_PAIR_BASE_DNS_NAME}
    secretName: letsencrypt-prod
